// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders a TagForm when the tag is clicked 1`] = `
<TagForm
  initialValues={
    Object {
      "name": "test",
    }
  }
  onCancel={[Function]}
  onSubmit={[Function]}
/>
`;

exports[`Tag renders a tag 1`] = `
<button
  className="tag clickable"
  onClick={[Function]}
  type="button"
>
  test
</button>
`;

exports[`Tag renders a tag with a changed name 1`] = `
<button
  className="tag clickable"
  onClick={[Function]}
  type="button"
>
  this is a new name
</button>
`;
